--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.example.xiaowennuan"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 5
-        versionName "1.1.2"
+        versionCode 6
+        versionName "1.1.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,6 +27,7 @@ dependencies {
     //compile 'com.nineoldandroids:library:2.4.0'
     //compile 'com.github.why168:LoopViewPagerLayout:2.0.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.chrisbanes:PhotoView:1.3.1'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.github.jdsjlzx:LRecyclerView:1.3.3'
